--- a/css/style.css
+++ b/css/style.css
@@ -11968,6 +11968,13 @@ code {
   overflow-y: auto;
 }
 
+body {
+  font-size: 16px;
+  font-family: "Cabin", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-family: "Cabin", sans-serif;
   font-weight: 600;
