--- a/css/style.css
+++ b/css/style.css
@@ -11980,4 +11980,50 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   font-weight: 600;
   line-height: 1.5;
   margin-bottom: 20px;
+}
+
+#zone-postscript-first {
+  background: #009ADE;
+  position: relative;
+  padding: 30px 0 50px 0;
+}
+
+.quicktabs-tabpage, .tab-content {
+  border: 3px solid #FF671D;
+  border-radius: 10px;
+  padding: 50px 20px;
+  color: #fff;
+}
+
+.donate-tab-content {
+  display: flex;
+}
+
+.tab-families, .tab-hours-home, .tab-hours-hospital {
+  flex: 33%;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 10px 10px 0 10px;
+}
+
+.tab-families, img {
+  margin-bottom: 20px;
+  max-height: 105px;
+  width: auto;
+}
+
+#views-bootstrap-tab-views-bootstrap-tabs-block-1 li.nav-item {
+  border: 1px solid #FFF;
+  border-bottom-color: rgb(255, 255, 255);
+  border-bottom-style: solid;
+  border-bottom-width: 2px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom: 0px;
+  color: #FFF;
+  text-decoration: none;
+}
+
+#views-bootstrap-tab-views-bootstrap-tabs-block-1 .nav-link, #views-bootstrap-tab-views-bootstrap-tabs-block-1 .media-library-view--widget .view-header a, .media-library-view--widget .view-header #views-bootstrap-tab-views-bootstrap-tabs-block-1 a {
+  color: #FFF;
 }/*# sourceMappingURL=style.css.map */
