--- a/scss/style.scss
+++ b/scss/style.scss
@@ -64,10 +64,10 @@ h1, h2, h3, h4, h5, h6 {
     display: block;
   }
   
-  #zone-header {
+  #zone-header-first {
     position: relative;
   }
-  .front #zone-header::before {
+  .front #zone-header-first::before {
     content: "";
     height: 15px;
     background: url(/themes/custom/assistb5subtheme/images/slices.png) top center no-repeat;
@@ -76,7 +76,30 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin-top: 0px;
     background-position: 0px bottom;
+    z-index:1;
   }
+
+  .front #block-assistb5subtheme-content {
+    margin: auto;
+    text-align: center;
+    width: 960px;
+  }
+
+  .front #block-assistb5subtheme-content article {
+    padding: 4em;
+  }
+
+  .front h1.page-title::before {
+    content: "";
+    height: 150px;
+    background: url(/themes/custom/assistb5subtheme/images/fleck-left.png) top left no-repeat;
+    position: absolute;
+    /* top: 0; */
+    width: 100%;
+    margin-top: 170px;
+    left: -300px;
+  }
+
   #zone-postscript-second {
     position: relative;
   } 
@@ -94,16 +117,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin-top: -15px;
   }
-  #zone-postscript-first:before {
-    content: "";
-    height: 150px;
-    background: url(/themes/custom/assistb5subtheme/images/fleck-left.png) top left no-repeat;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    margin-top: -150px;
-    left: -300px;
-  }
+
   #zone-postscript-second:before {
     content: "";
     height: 150px;
@@ -134,14 +148,13 @@ h1, h2, h3, h4, h5, h6 {
     background: url(/themes/custom/assistb5subtheme/images/ps3bk.jpg) center center no-repeat;
     background-size: cover;
   /* temp */ height: 400px;
-    padding-top: 45px;
+    padding-top: 0px;
   }
   #zone-postscript-third::before {
     content: "";
     height: 30px;
     background: url(/themes/custom/assistb5subtheme/images/wslice.png) top center no-repeat;
     position: absolute;
-    top: 0;
     width: 100%;
     margin-top: 0px;
     background-position: 0px 0px;
@@ -539,8 +552,9 @@ html {
   .zone-content {
     padding: 10px 0 50px 0;
   }
-  .front .zone-content-wrapper {
-    background: url(../images/header_splash.svg) no-repeat;
+  .front .zone-content-wrapper,
+  .front div.order-1 {
+    background: url(/themes/custom/assistb5subtheme/images/header_splash.svg) no-repeat;
     background-position: center 10px ;
   }
   .front .field-name-body {
@@ -553,7 +567,7 @@ html {
   .field-name-field-image {
     margin: 20px 0px;
   }
-  .front h1#page-title {
+  .front h1.page-title {
     display: block;
     color: #FFF;
     padding: 40px 0;
@@ -634,7 +648,8 @@ html {
   }
   */
   /* Super Promote */
- #block-views-block-random-homepage-story-block {
+ #block-views-block-random-homepage-story-block,
+ #block-views-block-random-host-story-block {
     position: relative;
     height: 280px;
     display: flex;
@@ -642,7 +657,7 @@ html {
     align-items: center;
   }
   .random-story{
-    max-width: 90%;
+    max-width: 60%;
     min-height: 200px;
     background: rgba(0,0,0,0.5);
     color: #FFF;
