--- a/css/style.css
+++ b/css/style.css
@@ -12035,10 +12035,16 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   z-index: 1;
 }
 
-.front #block-assistb5subtheme-content {
+#block-assistb5subtheme-content,
+#block-assistb5subtheme-breadcrumbs,
+#block-assistb5subtheme-page-title,
+#block-assistb5subtheme-local-tasks {
   margin: auto;
+  max-width: 960px;
+}
+
+.front #block-assistb5subtheme-content {
   text-align: center;
-  width: 960px;
 }
 
 .front #block-assistb5subtheme-content article {
@@ -12237,8 +12243,9 @@ address {
   line-height: 1.8;
 }
 
-h1, .h1 {
+h1.page-title, .page-title.h1 {
   font-size: 1.75em;
+  text-align: left !important;
 }
 
 h2, .h2, .crm-container fieldset legend {
@@ -12305,68 +12312,80 @@ ul {
   color: #FFF;
 }
 
+#block-headercontact {
+  max-width: 960px;
+  margin: auto;
+}
+
+.social-share ul li {
+  display: inline-block;
+}
+
+.header-contact li:nth-child(3) {
+  padding-top: 3px;
+}
+
+.social-share ul li a,
+.header-contact a.social {
+  text-indent: -9999px;
+  width: 30px;
+  height: 30px;
+  display: block;
+  margin: 10px;
+}
+
+.header-contact a.o-action {
+  padding: 4px 10px;
+}
+
+.header-contact a.social {
+  text-align: left;
+}
+
+.social-share ul li a.facebook,
+.header-contact a.facebook {
+  background: url(../images/social.svg) no-repeat;
+  background-size: 60px 30px;
+  background-position: 0px 0px;
+}
+
+.social-share ul li a.twitter,
+.header-contact a.twitter {
+  background: url(../images/social.svg) no-repeat;
+  background-size: 60px 30px;
+  background-position: -30px 0px;
+}
+
+.header-contact a.twitter,
+.header-contact a.facebook {
+  margin-right: 0px;
+}
+
+.header-contact ul {
+  margin-bottom: 10px;
+}
+
+.header-contact .header-donate {
+  display: block;
+  border: 0px;
+  color: #FFF;
+  background-color: #FF671D;
+  padding: 0.5em;
+  font-size: 1.4em;
+  font-family: "Cabin", sans-serif;
+  font-weight: 400;
+  line-height: 1.5;
+  text-decoration: none;
+  border-radius: 10px;
+  border-bottom-right-radius: 10px;
+  margin-bottom: 20px;
+}
+
+.header-contact .header-donate:hover {
+  background: #6ABF4B;
+}
+
 /*
-  .social-share ul li {
-    display: inline-block;
-  }
-  .header-contact li:nth-child(3) {
-    padding-top: 3px;
-  }
-  .social-share ul li a,
-  .header-contact a.social {
-    text-indent: -9999px;
-    width: 30px;
-    height: 30px;
-    display: block;
-    margin: 10px;
-  }
-  .header-contact a.o-action {
-        padding: 4px 10px;
-  }
-  .header-contact a.social {
-    text-align: left;
-  }
-  .social-share  ul li a.facebook,
-  .header-contact a.facebook {
-    background: url(../images/social.svg) no-repeat;
-    background-size: 60px 30px;
-    background-position: 0px 0px;
-  }
-  .social-share  ul li a.twitter,
-  .header-contact a.twitter {
-    background: url(../images/social.svg) no-repeat;
-    background-size: 60px 30px;
-    background-position: -30px 0px;
-  }
-  .header-contact a.twitter,
-  .header-contact a.facebook {
-    margin-right: 0px;
-  }
-
-  .header-contact ul {
-    margin-bottom: 10px;
-  }
-
-  .header-contact .header-donate {
-    display: block;
-    border: 0px;
-    color: #FFF;
-    background-color: #FF671D;
-    padding: 0.5em;
-    font-size: 1.4em;
-    font-family: 'Cabin', sans-serif;
-    font-weight: 400;
-    line-height: 1.5;
-    text-decoration: none;
-    border-radius: 10px;
-    border-bottom-right-radius: 10px;
-    margin-bottom: 20px;
-  }
-
-  .header-contact .header-donate:hover {
-    background: #6ABF4B;
-  }
-
   p.share-world {
     font-size: 0.833333333rem;
     margin-top: 20px;
@@ -12506,22 +12525,26 @@ div.sf-accordion-toggle.sf-style-white a.sf-expanded {
     margin-right: 0px; 
     text-align: center;
 }
+*/
 .header-contact {
   margin-top: 10px;
   text-align: center;
 }
+
 .header-contact a {
   text-decoration: none;
   color: #FFF;
   font-size: 1.3rem;
 }
+
 .header-contact p {
   margin-bottom: 0px;
 }
+
 .header-contact li {
   display: inline-block;
 }
-*/
+
 /* Front Content */
 .zone-content {
   padding: 10px 0 50px 0;
@@ -12550,6 +12573,7 @@ div.sf-accordion-toggle.sf-style-white a.sf-expanded {
   color: #FFF;
   padding: 40px 0;
   font-size: 1.5rem;
+  text-align: center !important;
 }
 
 a.o-action,
