--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,11 +79,18 @@ h1, h2, h3, h4, h5, h6 {
     z-index:1;
   }
 
-  .front #block-assistb5subtheme-content {
+  #block-assistb5subtheme-content,
+  #block-assistb5subtheme-breadcrumbs,
+  #block-assistb5subtheme-page-title,
+  #block-assistb5subtheme-local-tasks {
     margin: auto;
-    text-align: center;
-    width: 960px;
+    max-width: 960px;
   }
+
+  .front #block-assistb5subtheme-content {
+    text-align: center;
+  }
+
 
   .front #block-assistb5subtheme-content article {
     padding: 4em;
@@ -270,8 +277,9 @@ html {
   address {
     line-height: 1.8;
   }
-  h1 {
+  h1.page-title {
     font-size: 1.75em;
+    text-align: left !important;
   }
   h2, .crm-container fieldset legend {
     font-size: 1.166666667em;
@@ -327,7 +335,11 @@ html {
     font-size: 2.916666667rem;
     color: #FFF;
   }
-  /*
+
+  #block-headercontact {
+    max-width: 960px;
+    margin: auto;
+  }
   .social-share ul li {
     display: inline-block;
   }
@@ -388,7 +400,7 @@ html {
   .header-contact .header-donate:hover {
     background: #6ABF4B;
   }
-  
+  /*
   p.share-world {
     font-size: 0.833333333rem;
     margin-top: 20px;
@@ -532,6 +544,7 @@ html {
       margin-right: 0px; 
       text-align: center;
   }
+  */
   .header-contact {
     margin-top: 10px;
     text-align: center;
@@ -547,7 +560,7 @@ html {
   .header-contact li {
     display: inline-block;
   }
-  */
+  
   /* Front Content */
   .zone-content {
     padding: 10px 0 50px 0;
@@ -572,6 +585,7 @@ html {
     color: #FFF;
     padding: 40px 0;
     font-size: 1.5rem;
+    text-align: center !important;
   }
   a.o-action,
   .o-action a,
